# Diplom

./: .env.example  Dockerfile  Makefile  Readme.md  docker-compose.yml  drawIO.drawio  pyproject.toml  requirements.txt  session_name.session
backend/: analyzer.py  config.py  main.py  models.py  schemas.py  vkapi.py
backend/analyzer/: analyzer.py
backend/database/: database.py  models.py
backend/deploy/: config.py
backend/queue/: queue.py
backend/routers/: tgrouter.py  vkrouter.py
backend/schemas/: comment.py  flag.py  group.py  post.py  user.py
backend/vkapi/: vkapi.py
data_files/: examples.txt  filterwords.txt  flags.json  groups.json  keywords.txt
frontend/templates/: base.html  group_wall.html  search.html  telegram-comments.html  tg-channels.html  tg-comments.html  vk-groups.html  vk-posts.html
