[tool.poetry]
name = "diplom"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.104.1"}
requests = "^2.31.0"
pymystem3 = "^0.2.0"
pydantic = "^2.4.2"
SQLAlchemy = "^2.0.22"
alembic = "^1.12.1"
flake8 = "^6.1.0"
black = "^23.10.1"
mypy = "^1.6.1"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
